--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -14,3 +14,66 @@ sponsors:
   # - name: placeholder
   #   site: /
   #   image: assets/images/logo.png
+  # - name: placeholder
+  #   site: /
+  #   image: assets/images/logo.png
+  # - name: placeholder
+  #   site: /
+  #   image: assets/images/logo.png
+  # - name: placeholder
+  #   site: /
+  #   image: assets/images/logo.png
+  # - name: placeholder
+  #   site: /
+  #   image: assets/images/logo.png
+  # - name: placeholder
+  #   site: /
+  #   image: assets/images/logo.png
+  # - name: placeholder
+  #   site: /
+  #   image: assets/images/logo.png
+  # - name: placeholder
+  #   site: /
+  #   image: assets/images/logo.png
+  # - name: placeholder
+  #   site: /
+  #   image: assets/images/logo.png
+  # - name: placeholder
+  #   site: /
+  #   image: assets/images/logo.png
+  # - name: placeholder
+  #   site: /
+  #   image: assets/images/logo.png
+  # - name: placeholder
+  #   site: /
+  #   image: assets/images/logo.png
+  # - name: placeholder
+  #   site: /
+  #   image: assets/images/logo.png
+  # - name: placeholder
+  #   site: /
+  #   image: assets/images/logo.png
+  # - name: placeholder
+  #   site: /
+  #   image: assets/images/logo.png
+  # - name: placeholder
+  #   site: /
+  #   image: assets/images/logo.png
+  # - name: placeholder
+  #   site: /
+  #   image: assets/images/logo.png
+  # - name: placeholder
+  #   site: /
+  #   image: assets/images/logo.png
+  # - name: placeholder
+  #   site: /
+  #   image: assets/images/logo.png
+  # - name: placeholder
+  #   site: /
+  #   image: assets/images/logo.png
+  # - name: placeholder
+  #   site: /
+  #   image: assets/images/logo.png
+  # - name: placeholder
+  #   site: /
+  #   image: assets/images/logo.png
